--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -18846,24 +18846,24 @@
   ################################################################################################################################################################################################
 
 	### Head of Government ###
-	 FNG_Cao_Rulin_hog_sco:0 "Cao Rulin"
-	 Cao_Rulin_dead:0 " is incapable of holding any posts."
-	 Cao_Rulin_hog_fired:0 " is incapable of holding this post."
-	 FNG_Chang_Chun_hog_ade:0 "Chang Chun"
-	 Chang_Chun_dead:0 " is incapable of holding any posts."
-	 Chang_Chun_hog_fired:0 " is incapable of holding this post."
-	 FNG_Huang_Fu_hog_ade:0 "Huang Fu"
-	 Huang_Fu_dead:0 " is incapable of holding any posts."
-	 Huang_Fu_hog_fired:0 " is incapable of holding this post."
-	 FNG_Liang_Shiyi_hog_sco:0 "Liang Shiyi"
-	 Liang_Shiyi_dead:0 " is incapable of holding any posts."
-	 Liang_Shiyi_hog_fired:0 " is incapable of holding this post."
 	 FNG_Ruan_Zhenduo_hog_mli:0 "Ruan Zhenduo"
 	 Ruan_Zhenduo_dead:0 " is incapable of holding any posts."
 	 Ruan_Zhenduo_hog_fired:0 " is incapable of holding this post."
 	 FNG_Yang_Yuting_hog_mli:0 "Yang Yuting"
 	 Yang_Yuting_dead:0 " is incapable of holding any posts."
 	 Yang_Yuting_hog_fired:0 " is incapable of holding this post."
+	 FNG_Cao_Rulin_hog_sco:0 "Cao Rulin"
+	 Cao_Rulin_dead:0 " is incapable of holding any posts."
+	 Cao_Rulin_hog_fired:0 " is incapable of holding this post."
+	 FNG_Liang_Shiyi_hog_sco:0 "Liang Shiyi"
+	 Liang_Shiyi_dead:0 " is incapable of holding any posts."
+	 Liang_Shiyi_hog_fired:0 " is incapable of holding this post."
+	 FNG_Chang_Chun_hog_ade:0 "Chang Chun"
+	 Chang_Chun_dead:0 " is incapable of holding any posts."
+	 Chang_Chun_hog_fired:0 " is incapable of holding this post."
+	 FNG_Huang_Fu_hog_ade:0 "Huang Fu"
+	 Huang_Fu_dead:0 " is incapable of holding any posts."
+	 Huang_Fu_hog_fired:0 " is incapable of holding this post."
 	 FNG_Zhang_Xueliang_hog_pau:0 "Zhang Xueliang"
 	 Zhang_Xueliang_dead:0 " is incapable of holding any posts."
 	 Zhang_Xueliang_hog_fired:0 " is incapable of holding this post."
@@ -18872,56 +18872,56 @@
 	 Zhang_Zuolin_hog_fired:0 " is incapable of holding this post."
 
 	### Foreign Minister ###
+	 FNG_Ruan_Zhenduo_for_mli:0 "Ruan Zhenduo"
+	 Ruan_Zhenduo_dead:0 " is incapable of holding any posts."
+	 Ruan_Zhenduo_for_fired:0 " is incapable of holding this post."
 	 FNG_Chang_Chun_for_ade:0 "Chang Chun"
 	 Chang_Chun_dead:0 " is incapable of holding any posts."
 	 Chang_Chun_for_fired:0 " is incapable of holding this post."
 	 FNG_Huang_Fu_for_ade:0 "Huang Fu"
 	 Huang_Fu_dead:0 " is incapable of holding any posts."
 	 Huang_Fu_for_fired:0 " is incapable of holding this post."
-	 FNG_Ruan_Zhenduo_for_mli:0 "Ruan Zhenduo"
-	 Ruan_Zhenduo_dead:0 " is incapable of holding any posts."
-	 Ruan_Zhenduo_for_fired:0 " is incapable of holding this post."
+	 FNG_Wu_Jinglian_for_ade:0 "Wu Jinglian"
+	 Wu_Jinglian_dead:0 " is incapable of holding any posts."
+	 Wu_Jinglian_for_fired:0 " is incapable of holding this post."
 	 FNG_Sun_Qichang_for_pau:0 "Sun Qichang"
 	 Sun_Qichang_dead:0 " is incapable of holding any posts."
 	 Sun_Qichang_for_fired:0 " is incapable of holding this post."
 	 FNG_Wang_Yintai_for_pau:0 "Wang Yintai"
 	 Wang_Yintai_dead:0 " is incapable of holding any posts."
 	 Wang_Yintai_for_fired:0 " is incapable of holding this post."
-	 FNG_Wu_Jinglian_for_ade:0 "Wu Jinglian"
-	 Wu_Jinglian_dead:0 " is incapable of holding any posts."
-	 Wu_Jinglian_for_fired:0 " is incapable of holding this post."
 
 	### Economy Minister ###
-	 FNG_Chang_Chun_eco_ade:0 "Chang Chun"
-	 Chang_Chun_dead:0 " is incapable of holding any posts."
-	 Chang_Chun_eco_fired:0 " is incapable of holding this post."
-	 FNG_Li_Shaogeng_eco_sco:0 "Li Shaogeng"
-	 Li_Shaogeng_dead:0 " is incapable of holding any posts."
-	 Li_Shaogeng_eco_fired:0 " is incapable of holding this post."
-	 FNG_Lu_Ronghuan_eco_sco:0 "Lu Ronghuan"
-	 Lu_Ronghuan_dead:0 " is incapable of holding any posts."
-	 Lu_Ronghuan_eco_fired:0 " is incapable of holding this post."
-	 FNG_Pan_Fu_eco_ade:0 "Pan Fu"
-	 Pan_Fu_dead:0 " is incapable of holding any posts."
-	 Pan_Fu_eco_fired:0 " is incapable of holding this post."
 	 FNG_Ruan_Zhenduo_eco_mli:0 "Ruan Zhenduo"
 	 Ruan_Zhenduo_dead:0 " is incapable of holding any posts."
 	 Ruan_Zhenduo_eco_fired:0 " is incapable of holding this post."
-	 FNG_Sun_Qichang_eco_pau:0 "Sun Qichang"
-	 Sun_Qichang_dead:0 " is incapable of holding any posts."
-	 Sun_Qichang_eco_fired:0 " is incapable of holding this post."
-	 FNG_Tang_Yulin_eco_pau:0 "Tang Yulin"
-	 Tang_Yulin_dead:0 " is incapable of holding any posts."
-	 Tang_Yulin_eco_fired:0 " is incapable of holding this post."
-	 FNG_Y_C_James_Yen_eco_ade:0 "Y. C. James Yen"
-	 Y_C_James_Yen_dead:0 " is incapable of holding any posts."
-	 Y_C_James_Yen_eco_fired:0 " is incapable of holding this post."
 	 FNG_Yoshisuke_Aikawa_eco_mli:0 "Yoshisuke Aikawa"
 	 Yoshisuke_Aikawa_dead:0 " is incapable of holding any posts."
 	 Yoshisuke_Aikawa_eco_fired:0 " is incapable of holding this post."
 	 FNG_Yu_Zhishan_eco_mli:0 "Yu Zhishan"
 	 Yu_Zhishan_dead:0 " is incapable of holding any posts."
 	 Yu_Zhishan_eco_fired:0 " is incapable of holding this post."
+	 FNG_Li_Shaogeng_eco_sco:0 "Li Shaogeng"
+	 Li_Shaogeng_dead:0 " is incapable of holding any posts."
+	 Li_Shaogeng_eco_fired:0 " is incapable of holding this post."
+	 FNG_Lu_Ronghuan_eco_sco:0 "Lu Ronghuan"
+	 Lu_Ronghuan_dead:0 " is incapable of holding any posts."
+	 Lu_Ronghuan_eco_fired:0 " is incapable of holding this post."
+	 FNG_Chang_Chun_eco_ade:0 "Chang Chun"
+	 Chang_Chun_dead:0 " is incapable of holding any posts."
+	 Chang_Chun_eco_fired:0 " is incapable of holding this post."
+	 FNG_Pan_Fu_eco_ade:0 "Pan Fu"
+	 Pan_Fu_dead:0 " is incapable of holding any posts."
+	 Pan_Fu_eco_fired:0 " is incapable of holding this post."
+	 FNG_Y_C_James_Yen_eco_ade:0 "Y. C. James Yen"
+	 Y_C_James_Yen_dead:0 " is incapable of holding any posts."
+	 Y_C_James_Yen_eco_fired:0 " is incapable of holding this post."
+	 FNG_Sun_Qichang_eco_pau:0 "Sun Qichang"
+	 Sun_Qichang_dead:0 " is incapable of holding any posts."
+	 Sun_Qichang_eco_fired:0 " is incapable of holding this post."
+	 FNG_Tang_Yulin_eco_pau:0 "Tang Yulin"
+	 Tang_Yulin_dead:0 " is incapable of holding any posts."
+	 Tang_Yulin_eco_fired:0 " is incapable of holding this post."
 	 FNG_Yuan_Jinkai_eco_pau:0 "Yuan Jinkai"
 	 Yuan_Jinkai_dead:0 " is incapable of holding any posts."
 	 Yuan_Jinkai_eco_fired:0 " is incapable of holding this post."
@@ -18930,30 +18930,30 @@
 	 Zhang_Xueliang_eco_fired:0 " is incapable of holding this post."
 
 	### Security Minister ###
-	 FNG_Cao_Rulin_sec_sco:0 "Cao Rulin"
-	 Cao_Rulin_dead:0 " is incapable of holding any posts."
-	 Cao_Rulin_sec_fired:0 " is incapable of holding this post."
 	 FNG_Ding_Jianxiu_sec_mli:0 "Ding Jianxiu"
 	 Ding_Jianxiu_dead:0 " is incapable of holding any posts."
 	 Ding_Jianxiu_sec_fired:0 " is incapable of holding this post."
+	 FNG_Yang_Yuting_sec_mli:0 "Yang Yuting"
+	 Yang_Yuting_dead:0 " is incapable of holding any posts."
+	 Yang_Yuting_sec_fired:0 " is incapable of holding this post."
+	 FNG_Cao_Rulin_sec_sco:0 "Cao Rulin"
+	 Cao_Rulin_dead:0 " is incapable of holding any posts."
+	 Cao_Rulin_sec_fired:0 " is incapable of holding this post."
 	 FNG_Li_Shaogeng_sec_sco:0 "Li Shaogeng"
 	 Li_Shaogeng_dead:0 " is incapable of holding any posts."
 	 Li_Shaogeng_sec_fired:0 " is incapable of holding this post."
 	 FNG_Liang_Shiyi_sec_sco:0 "Liang Shiyi"
 	 Liang_Shiyi_dead:0 " is incapable of holding any posts."
 	 Liang_Shiyi_sec_fired:0 " is incapable of holding this post."
+	 FNG_Y_C_James_Yen_sec_ade:0 "Y. C. James Yen"
+	 Y_C_James_Yen_dead:0 " is incapable of holding any posts."
+	 Y_C_James_Yen_sec_fired:0 " is incapable of holding this post."
 	 FNG_Ma_Zhanshan_sec_pau:0 "Ma Zhanshan"
 	 Ma_Zhanshan_dead:0 " is incapable of holding any posts."
 	 Ma_Zhanshan_sec_fired:0 " is incapable of holding this post."
 	 FNG_Tang_Yulin_sec_pau:0 "Tang Yulin"
 	 Tang_Yulin_dead:0 " is incapable of holding any posts."
 	 Tang_Yulin_sec_fired:0 " is incapable of holding this post."
-	 FNG_Y_C_James_Yen_sec_ade:0 "Y. C. James Yen"
-	 Y_C_James_Yen_dead:0 " is incapable of holding any posts."
-	 Y_C_James_Yen_sec_fired:0 " is incapable of holding this post."
-	 FNG_Yang_Yuting_sec_mli:0 "Yang Yuting"
-	 Yang_Yuting_dead:0 " is incapable of holding any posts."
-	 Yang_Yuting_sec_fired:0 " is incapable of holding this post."
 	 FNG_Yuan_Jinkai_sec_pau:0 "Yuan Jinkai"
 	 Yuan_Jinkai_dead:0 " is incapable of holding any posts."
 	 Yuan_Jinkai_sec_fired:0 " is incapable of holding this post."
@@ -18974,26 +18974,29 @@
 	 FNG_Mo_Dehui_int_sco:0 "Mo Dehui"
 	 Mo_Dehui_dead:0 " is incapable of holding any posts."
 	 Mo_Dehui_int_fired:0 " is incapable of holding this post."
-	 FNG_Tang_Yulin_int_pau:0 "Tang Yulin"
-	 Tang_Yulin_dead:0 " is incapable of holding any posts."
-	 Tang_Yulin_int_fired:0 " is incapable of holding this post."
 	 FNG_Wu_Jinglian_int_ade:0 "Wu Jinglian"
 	 Wu_Jinglian_dead:0 " is incapable of holding any posts."
 	 Wu_Jinglian_int_fired:0 " is incapable of holding this post."
+	 FNG_Tang_Yulin_int_pau:0 "Tang Yulin"
+	 Tang_Yulin_dead:0 " is incapable of holding any posts."
+	 Tang_Yulin_int_fired:0 " is incapable of holding this post."
 	 FNG_Zang_Shiyi_int_pau:0 "Zang Shiyi"
 	 Zang_Shiyi_dead:0 " is incapable of holding any posts."
 	 Zang_Shiyi_int_fired:0 " is incapable of holding this post."
 
 	### Military High Command ###
+	 FNG_Yang_Yuting_mhc_mli:0 "Yang Yuting"
+	 Yang_Yuting_dead:0 " is incapable of holding any posts."
+	 Yang_Yuting_mhc_fired:0 " is incapable of holding this post."
+	 FNG_Zhou_Ziqi_mhc_sco:0 "Zhou Ziqi"
+	 Zhou_Ziqi_dead:0 " is incapable of holding any posts."
+	 Zhou_Ziqi_mhc_fired:0 " is incapable of holding this post."
 	 FNG_Ma_Zhanshan_mhc_pau:0 "Ma Zhanshan"
 	 Ma_Zhanshan_dead:0 " is incapable of holding any posts."
 	 Ma_Zhanshan_mhc_fired:0 " is incapable of holding this post."
 	 FNG_Wu_Junsheng_mhc_pau:0 "Wu Junsheng"
 	 Wu_Junsheng_dead:0 " is incapable of holding any posts."
 	 Wu_Junsheng_mhc_fired:0 " is incapable of holding this post."
-	 FNG_Yang_Yuting_mhc_mli:0 "Yang Yuting"
-	 Yang_Yuting_dead:0 " is incapable of holding any posts."
-	 Yang_Yuting_mhc_fired:0 " is incapable of holding this post."
 	 FNG_Zang_Shiyi_mhc_pau:0 "Zang Shiyi"
 	 Zang_Shiyi_dead:0 " is incapable of holding any posts."
 	 Zang_Shiyi_mhc_fired:0 " is incapable of holding this post."
@@ -19003,14 +19006,20 @@
 	 FNG_Zhang_Zuolin_mhc_pau:0 "Zhang Zuolin"
 	 Zhang_Zuolin_dead:0 " is incapable of holding any posts."
 	 Zhang_Zuolin_mhc_fired:0 " is incapable of holding this post."
-	 FNG_Zhou_Ziqi_mhc_sco:0 "Zhou Ziqi"
-	 Zhou_Ziqi_dead:0 " is incapable of holding any posts."
-	 Zhou_Ziqi_mhc_fired:0 " is incapable of holding this post."
 
 	### Chief of Army ###
 	 FNG_Bao_Wenyue_carm_mli:0 "Bao Wenyue"
 	 Bao_Wenyue_dead:0 " is incapable of holding any posts."
 	 Bao_Wenyue_carm_fired:0 " is incapable of holding this post."
+	 FNG_Yang_Yuting_carm_mli:0 "Yang Yuting"
+	 Yang_Yuting_dead:0 " is incapable of holding any posts."
+	 Yang_Yuting_carm_fired:0 " is incapable of holding this post."
+	 FNG_Yu_Zhishan_carm_mli:0 "Yu Zhishan"
+	 Yu_Zhishan_dead:0 " is incapable of holding any posts."
+	 Yu_Zhishan_carm_fired:0 " is incapable of holding this post."
+	 FNG_Zhou_Ziqi_carm_sco:0 "Zhou Ziqi"
+	 Zhou_Ziqi_dead:0 " is incapable of holding any posts."
+	 Zhou_Ziqi_carm_fired:0 " is incapable of holding this post."
 	 FNG_Ma_Zhanshan_carm_pau:0 "Ma Zhanshan"
 	 Ma_Zhanshan_dead:0 " is incapable of holding any posts."
 	 Ma_Zhanshan_carm_fired:0 " is incapable of holding this post."
@@ -19023,21 +19032,12 @@
 	 FNG_Wu_Junsheng_carm_pau:0 "Wu Junsheng"
 	 Wu_Junsheng_dead:0 " is incapable of holding any posts."
 	 Wu_Junsheng_carm_fired:0 " is incapable of holding this post."
-	 FNG_Yang_Yuting_carm_mli:0 "Yang Yuting"
-	 Yang_Yuting_dead:0 " is incapable of holding any posts."
-	 Yang_Yuting_carm_fired:0 " is incapable of holding this post."
-	 FNG_Yu_Zhishan_carm_mli:0 "Yu Zhishan"
-	 Yu_Zhishan_dead:0 " is incapable of holding any posts."
-	 Yu_Zhishan_carm_fired:0 " is incapable of holding this post."
 	 FNG_Zang_Shiyi_carm_pau:0 "Zang Shiyi"
 	 Zang_Shiyi_dead:0 " is incapable of holding any posts."
 	 Zang_Shiyi_carm_fired:0 " is incapable of holding this post."
 	 FNG_Zhang_Zuoxiang_carm_pau:0 "Zhang Zuoxiang"
 	 Zhang_Zuoxiang_dead:0 " is incapable of holding any posts."
 	 Zhang_Zuoxiang_carm_fired:0 " is incapable of holding this post."
-	 FNG_Zhou_Ziqi_carm_sco:0 "Zhou Ziqi"
-	 Zhou_Ziqi_dead:0 " is incapable of holding any posts."
-	 Zhou_Ziqi_carm_fired:0 " is incapable of holding this post."
 
 	### Chief of Navy ###
 	 FNG_Shen_Honglie_cnav_sco:0 "Shen Honglie"
@@ -19048,21 +19048,21 @@
 	 Yin_Tsuo_chien_cnav_fired:0 " is incapable of holding this post."
 
 	### Chief of Air Force ###
+	 FNG_Yang_Yuting_cair_mli:0 "Yang Yuting"
+	 Yang_Yuting_dead:0 " is incapable of holding any posts."
+	 Yang_Yuting_cair_fired:0 " is incapable of holding this post."
 	 FNG_Gao_Zhihang_cair_sco:0 "Gao Zhihang"
 	 Gao_Zhihang_dead:0 " is incapable of holding any posts."
 	 Gao_Zhihang_cair_fired:0 " is incapable of holding this post."
 	 FNG_Shen_Honglie_cair_sco:0 "Shen Honglie"
 	 Shen_Honglie_dead:0 " is incapable of holding any posts."
 	 Shen_Honglie_cair_fired:0 " is incapable of holding this post."
-	 FNG_Yang_Yuting_cair_mli:0 "Yang Yuting"
-	 Yang_Yuting_dead:0 " is incapable of holding any posts."
-	 Yang_Yuting_cair_fired:0 " is incapable of holding this post."
-	 FNG_Zhang_Xueliang_cair_pau:0 "Zhang Xueliang"
-	 Zhang_Xueliang_dead:0 " is incapable of holding any posts."
-	 Zhang_Xueliang_cair_fired:0 " is incapable of holding this post."
 	 FNG_Zhou_Ziqi_cair_sco:0 "Zhou Ziqi"
 	 Zhou_Ziqi_dead:0 " is incapable of holding any posts."
 	 Zhou_Ziqi_cair_fired:0 " is incapable of holding this post."
+	 FNG_Zhang_Xueliang_cair_pau:0 "Zhang Xueliang"
+	 Zhang_Xueliang_dead:0 " is incapable of holding any posts."
+	 Zhang_Xueliang_cair_fired:0 " is incapable of holding this post."
 
   ################################################################################################################################################################################################
   ### FRA
@@ -50723,6 +50723,9 @@
 	 USA_Alf_Landon_hog_mli:0 "Alf Landon"
 	 Alf_Landon_dead:0 " is incapable of holding any posts."
 	 Alf_Landon_hog_fired:0 " is incapable of holding this post."
+	 USA_Charles_Curtis_hog_mli:0 "Charles Curtis"
+	 Charles_Curtis_dead:0 " is incapable of holding any posts."
+	 Charles_Curtis_hog_fired:0 " is incapable of holding this post."
 	 USA_Frank_Knox_hog_mli:0 "Frank Knox"
 	 Frank_Knox_dead:0 " is incapable of holding any posts."
 	 Frank_Knox_hog_fired:0 " is incapable of holding this post."
