Dev approved China quotes.

--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -100,3 +100,6 @@ LOADING_TIP_97:0 "Why do I hate the communists? These devils? They killed my son
 LOADING_TIP_98:0 "We captured Moscow at the dawn. We won. But I don't feel joy and rapture. Because the Russians defeated the Russians. \n- Boris Savinkov, The Black Horse"
 LOADING_TIP_99:0 "There is nothing under the sun that the Siamese police cannot do. \n- Phao Sriyanond"
 LOADING_TIP_100:0 "Give me a Japanese division armed with bamboo spears and I'll wipe out the entire Russian Far Eastern Army. \n- Sadao Araki"
+LOADING_TIP_101:0 "The recent history of both Europe and Asia shows beyond a doubt the futility of trying to turn a tiger into a kitten by giving it a dish of cream. \n- Dr. Wellington Koo"
+LOADING_TIP_102:0 "All revolutions must be social revolutions, based upon fundamental changes in society; otherwise it is not a revolution, but merely a change of government. \n- Madame Sun"
+LOADING_TIP_103:0 "Zhang Tianran, although born into the mortal world, is known by all to be one with the Universe—the living enlightened Jigong, sent by heaven to save humanity. \n- Shangqing Pamphlet, September 1936"
