Removed blatant Manchukuo.
(Replaced Nissan-Dōwa Automobile with Mingsheng Automobile Company)

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -29,9 +29,9 @@ FNG_informal_empire_5:0 "Mantetsu Dominance"
 FNG_expel_japanese_officers_tooltip:0 "Completing this focus will have dire consequences for Fengtian's relationship with Japan. \n"
 FNG_proclamation_tooltip:0 "Only complete this focus when prepared to begin the Reclamation War within a year. \n"
 FNG_mantetsu_collaboration_unlock:0 "Unlocks the Mantetsu Industrial Subsiduaries company. \n"
-FNG_manufacture_mingsheng_unlock:0 "Unlocks the Nissan-Dowa Nissan-Dōwa Automobile company. \n"
+FNG_manufacture_mingsheng_unlock:0 "Unlocks the Mingsheng Automobile Company. \n"
 FNG_incentivize_zaibatsu_arms_manufacture_unlock:0 "Unlocks the Mitsubishi Heavy Industries company. \n"
-FNG_standardize_equipment_unlock:0 "Unlocks the Mukden Arsenal company"
+FNG_standardize_equipment_unlock:0 "Unlocks the Mukden Arsenal company \n"
 FNG_remove_investment_dearth:0 "Helps remove the Investment Dearth national spirit. \n"
 
 ### Focus Flags ###
