--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -230,7 +230,7 @@ mogadishu_naval_yard:0 "Mogadishu Naval Yard"
 ### Fengtian ###
 mantetsu_industrial_subsiduaries:0 "Mantetsu Industrial Subsiduaries"
 mudken_arsenal:0 "Mudken Arsenal"
-nissan_dowa_automobile:0 "Nissan-Dōwa Automobile Company"
+mingsheng_automobile_company:0 "Mingsheng Automobile Company"
 mitsubishi_heavy_industries:0 "Mitsubishi Heavy Industries"
 manchuria_airplane_company:0 "Manchuria Airplane Manufacturing Company"
 manchuria_aviation_company:0 "Manchuria Aviation Company"
