Finally got it to work!

--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -62,6 +62,8 @@ SWE_SENREF_fanaticism:0 "Fanatic Nationalism"
 SWE_SENREF_fanaticism_desc:0 "Each and every one of our citizens will happily give their lives for our country."
 SWE_SENREF_slavery:0 "Serfdom"
 SWE_SENREF_slavery_desc:0 "While not exactly slavery, this is about as close as it gets. Serfs are forced to work for nothing else than substinence, effectively making them slaves on their lords estate, working the land in exchange for very little in return."
+SWE_SENREF_freemedia:0 "Free Press"
+SWE_SENREF_freemedia_desc:0 "The state grip on television and radio broadcasting has been done with and free thought and diverse ideas are spreading across the nation, for good and bad."
 
 ### Old Ideas ###
 
@@ -204,8 +206,8 @@ SWE_SENREF_AUTHLEFT:0 "Revolution"
 SWE_SENREF_AUTHLEFT_desc:0 "Enough fooling around. The Market Economy is just a tool for the few to leech wealth out of the hard work of the many. A system that is meant to stack all the cards in favor of the strong at the cost of the well-being of the weak is rotten to the core. Tear it all down."
 SWE_SENREF_LIBLEFT:0 "Reform"
 SWE_SENREF_LIBLEFT_desc:0 "The Market Economy has the potential to produce a lot of wealth. It is not the system itself that is flawed, it is where the money goes. The benefits of a capitalist economy can be reaped by everyone if we just share the wealth around. There is plenty of money in the system, we must use it for the good of the people."
-SWE_SENREF_LIBRIGHT:0 "Individual Rights"
-SWE_SENREF_LIBRIGHT_desc:0 "Groups do not have rights. Individuals do. By allowing maximum agency for the individual every man and woman will be able to pursue their dreams and ambitions. This is the driving force behind capitalism and the only way that an economy can be both free and just."
+SWE_SENREF_LIBRIGHT:0 "Property Rights"
+SWE_SENREF_LIBRIGHT_desc:0 "Private property is sacret. Every home is a castle and every man is a king. The government has no business in stealing the hard-earned assets of it's citizens. The government is there to serve it's people, not the other way around. Don't tread on me."
 SWE_SENREF_AUTHRIGHT:0 "The Greater Good"
 SWE_SENREF_AUTHRIGHT_desc:0 "We are all part of the same people and we have a responsibility to take care of eachother. We should encourage cooperation instead of competition. Because people cannot be trusted to make sacrifices voluntarily, there has to be rule of law. All for the greater good of the nation."
 SWE_SENREF_RADICAL:0 "Abolish the Monarchy"
@@ -243,8 +245,8 @@ SWE_SENREF_LIBERAL:0 "Tax Cuts"
 SWE_SENREF_LIBERAL_desc:0 "Taxation is theft. A little might be necessary but too much is definitely bad. Public funds will suffer, but it is a small price to pay when property rights are on the line."
 SWE_SENREF_LIBERAL1:0 "Deregulation"
 SWE_SENREF_LIBERAL1_desc:0 "We cannot allow our businesses to get caught up in unnecessary red tape. We must rid ourselves of useless legislation and streamline the market to make it more efficient."
-SWE_SENREF_LIBERAL2:0 "End Gender Discrimination"
-SWE_SENREF_LIBERAL2_desc:0 "It is the current year and we are still tied to old customs of what men and women are supposed to do. By getting rid of old taboos and norms we can open up the workplace for millions of women."
+SWE_SENREF_LIBERAL2:0 "Abolish State Media"
+SWE_SENREF_LIBERAL2_desc:0 "It's time that people are made to form their own opinions, rather than be fed what the government wants to feed them. Sveriges Television has had a good run, but this relic of pseudo-indoctrination has to go away for our society to truly become free. While this might make our society less unified, encouraging free thought is always the right thing to do."
 SWE_SENREF_LIBERAL3:0 "Encourage Immigration"
 SWE_SENREF_LIBERAL3_desc:0 "We should make it lucrative for the best and brightest to flock to our country. Show the world that Sweden is the best place to go if you want to get far in life on our own merits."
 SWE_SENREF_LIBERAL4:0 "Free Trade"
@@ -281,6 +283,15 @@ SWE_SENREF_STATARE1:0 "Abolish Statare"
 SWE_SENREF_STATARE1_desc:0 "Statare is basically a form of modern slavery. How can we pretend to be a nation of equal opportunite while such travesties are allowed to occur on our soil?"
 SWE_SENREF_STATARE2:0 "Legalize Human Ownership"
 SWE_SENREF_STATARE2_desc:0 "Some say that Statare is tantamount to slavery. Maybe it is, but is there really anything wrong with that?"
+SWE_SENREF_COLLECT:0 "Collectivist Ethos"
+SWE_SENREF_COLLECT_desc:0 "While we each have our own lives and ambitions, we also have a duty to take care of each other. The individual must step aside for the greater good."
+SWE_SENREF_INDIV:0 "Individualist Ethos"
+SWE_SENREF_INDIV_desc:0 "Groups do not have rights. Individuals do. By allowing maximum agency for the individual every man and woman will be able to pursue their dreams and ambitions. This is the driving force behind capitalism and the only way that an economy can be both free and just."
+SWE_SENREF_CORP:0 "Corporatist Ethos"
+SWE_SENREF_CORP_desc:0 "Men are merely cogs in a greater machine. While some individuals rise to shine above others the sad truth is that most people will never be anything more than mere plebs. The corporation is the perfect combination of individual drive and a collective mind working together."
+
+
+
 
 SWE_SENREF_DOCTRINE:0 "ÖB"
 SWE_SENREF_DOCTRINE_desc:0 "There is a limit to how well our Generals can cooperate. We need to establish a new role. Överbefälhavare (Supreme Commander) to sit at the top of our armed forces."
