--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -207,7 +207,7 @@ SWE_SENREF_AUTHLEFT_desc:0 "Enough fooling around. The Market Economy is just a 
 SWE_SENREF_LIBLEFT:0 "Reform"
 SWE_SENREF_LIBLEFT_desc:0 "The Market Economy has the potential to produce a lot of wealth. It is not the system itself that is flawed, it is where the money goes. The benefits of a capitalist economy can be reaped by everyone if we just share the wealth around. There is plenty of money in the system, we must use it for the good of the people."
 SWE_SENREF_LIBRIGHT:0 "Property Rights"
-SWE_SENREF_LIBRIGHT_desc:0 "Private property is sacret. Every home is a castle and every man is a king. The government has no business in stealing the hard-earned assets of it's citizens. The government is there to serve it's people, not the other way around. Don't tread on me."
+SWE_SENREF_LIBRIGHT_desc:0 "Private property is sacred. Every home is a castle and every man is a king. The government has no business in stealing the hard-earned assets of it's citizens. The government is there to serve it's people, not the other way around. Don't tread on me."
 SWE_SENREF_AUTHRIGHT:0 "The Greater Good"
 SWE_SENREF_AUTHRIGHT_desc:0 "We are all part of the same people and we have a responsibility to take care of eachother. We should encourage cooperation instead of competition. Because people cannot be trusted to make sacrifices voluntarily, there has to be rule of law. All for the greater good of the nation."
 SWE_SENREF_RADICAL:0 "Abolish the Monarchy"
