Opinion Modifiers + Localisation for Turkestan

--- a/localisation/KR_Turkestan_l_english.yml
+++ b/localisation/KR_Turkestan_l_english.yml
@@ -1,4 +1,36 @@
 ﻿l_english:
+### Ideas ###
+trk_sharifian_struggle:0 "Sharifian Struggle"
+trk_preparing_the_conference:0 "Preparing the Conference"
+itcs_funding:0 "Islamic Technological Cooperation Society Funding Program"
+
+### Opinion Modifiers ###
+TRK_declare_war_DEH:0 "Turkestan Attacked Us"
+TRK_no_declare_war_DEH:0 "Turkestan Remain Still"
+TRK_no_declare_war_RUS:0 "Turkestan Remain Still"
+TRK_sharifian_caliphate_OTT:0 "They Tried to restore the Sharifian Caliphate"
+TRK_new_caliphate:0 "They created the Bukhara Caliphate"
+TRK_sharifian_caliphate_OTT_ref:0 "Refused to Restore the Sharifian Caliphate"
+TRK_sharifian_caliphate_TRK_ref:0 "Refused to Restore the Sharifian Caliphate"
+TRK_sharifian_caliphate_OTT_fund:0 "Restored the Sharifian Caliphate"
+TRK_sharifian_caliphate_OTT_acc:0 "Restored the Sharifian Caliphate"
+TRK_sharifian_caliphate_SAU_acc:0 "Restored the Sharifian Caliphate"
+TRK_recognise_bukhara_OTT:0 "They Recognised the Caliphate in Bukhara"
+TRK_recognise_bukhara_TRK:0 "They Recognised our Caliphate"
+TRK_no_recognise_bukhara_OTT:0 "They didn't Recognise the Caliphate in Bukhara"
+TRK_no_recognise_bukhara_TRK:0 "They didn't Recognise our Caliphate"
+TRK_bukhara_recognized:0 "Recognise the Caliphate"
+TRK_bukhara_no_recognized:0 "Don't recognise the Caliphate"
+TRK_tag_no_int_conference:0 "Won't Assist the Conference"
+TRK_tag_int_conference:0 "Will Assist the Conference"
+TRK_cros_border_to_synd:0 "Closed borders to Syndicalists"
+TRK_cros_border_to_synd_no:0 "Didn't Join the Border Initiative"
+TRK_cros_border_to_synd_yes:0 "Joined the Border Initiative"
+TRK_accepted_all:0 "We're Allies"
+TRK_occ_sun_PER_25:0 "They Occupied Sunni Territories in Persia"
+TRK_occ_sun_PER_50:0 "They Occupied Sunni Territories in Persia"
+TRK_occ_PER_25:0 "They Occupied Persia"
+TRK_occ_PER_50:0 "They Occupied Persia"
 
 ### Events ###
 turkestan.1.t:0 "The Hour is at Hand!"
@@ -47,3 +79,30 @@ turkestan.9.t:0 "We are Victorious!"
 turkestan.9.d:0 "Kazakhstan has been fully subjugated by Turkestan! The foul state of the infidels is no more!"
 turkestan.9.a:0 "This is merely the first step to rebuilding the Caliphate"
 turkestan.9.b:0 "We must now only promote where we rule"
+
+turkestan.10.t:0 "Delhi at war"
+turkestan.10.d:0 "Delhi, a former British colony, is engaged in a major war and may not be able to defend its interests in Asia!  This could be our chance to expand, if not into India then at least into Persia and Afghanistan!"
+turkestan.10.a:0 "We shall march all the way to Tehran and Delhi!"
+turkestan.10.b:0 "Only move against Persia"
+turkestan.10.c:0 "The time is not yet right"
+
+turkestan.11.t:0 "Turkestan moves into Persia"
+turkestan.11.d:0 "We have always attempted to maintain stability on the frontiers of northern-west of India, but our forces are severely overstretched at the moment.  Can we risk a war against Turkestan as well?"
+turkestan.11.a:0 "We shall protect them."
+turkestan.11.b:0 "We shall wait this out."
+turkestan.11.c:0 "We must occupy Persia before Turkestan."
+
+turkestan.12.t:0 "Russia at war"
+turkestan.12.d:0 "The Russians are engaged in a major war, and may not be able to defend their interests in Turania!  This could be our chance to expand the Caliphate into Russian Tartary!"
+turkestan.12.a:0 "Yes, smash the Russians!"
+turkestan.12.b:0 "The time is not yet right"
+
+turkestan.13.t:0 "The Emir is dead"
+turkestan.13.d:0 "Mohammed Alim Khan, the Emir of Bukhara and grand Head of State of the Islamic Federation of Turkestan, has passed away today due to natural causes. The Council of State is now deliberating on who will be the next supreme ruler of the country: will the Emir's son, Crown Prince Shahmurad, inherit his father's position? Will the ambitious Ibrahim Bek be able to finally assume supreme power in Turkestan? Or will the shadowy clerical faction under Mufti Ishan Babakhan triumph?"
+turkestan.13.a:0 "Crown Prince Shahmurad assumes power"
+turkestan.13.b:0 "Ibrahim Bek consolidates his dictatorship"
+turkestan.13.c:0 "Mufti Ishan Babakhan will bring the rule of Islam to the land"
+
+turkestan.14.t:0 "The Mechanical Horse"
+turkestan.14.d:0 "Shahmurad Alim Khan, the Emir of Bukhara and grand Head of State of the Islamic Federation of Turkestan, introduces the mechanical horse to the skeptical people of Turkestan. The Emir first encountered the internal combustion engine on a visit to Berlin and very quickly realized that the horse had had it's day. Once crowned Emir, Shahmurad Alim Khan became a relentless promoter of the engine to his people and more specifically it's military."
+turkestan.14.a:0 "Crown Prince Shahmurad assumes power"
