--- a/localisation/KR_Theorists_l_english.yml
+++ b/localisation/KR_Theorists_l_english.yml
@@ -60,11 +60,11 @@ kr_arthur_radford:0 "Arthur Radford"
 kr_george_patton:0 "George Patton"
 
 ### Ukraine ###
-kharkiv_aviation_institute:0 "Kharkivsky aviatsiynyy instytut"
-university_kyiv:0 "Universytet m.Kyyeva"
-kiev_military_academy:0 "Kyyiv Viyskova akademiya"
-odessa_state_maritime_academy:0 "Odeskyy morskyy koledzh"
-valentyn_p_hliuskho:0 "Valentyn P.Hliuskho"
+kharkiv_aviation_institute:0 "KhAI imeni N.E.Zhukovskogo"
+university_kyiv:0 "Kievsky universitet sv. Vladimira"
+kiev_military_academy:0 "Natsionalny universitet oborony Ukrainy"
+odessa_state_maritime_academy:0 "Odesskoe vyshee morekhodnoye uchilishe"
+valentyn_p_hliuskho:0 "Valentin Glushko"
 
 ### White Ruthenia ###
 bronislav_kaminski:0 "Bronislav Kaminski"
