--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -743,18 +743,18 @@ pilatus:0 "Pilatus"
 werner_risch:0 "Werner Risch"
 
 ### Ukraine ###
-kommunara_nikolayev_shipyards:0 "Nikolayev Shipyards"
-german_ukranian_agricultural_comission:0 "German-Ukrainian Agricultural Comission"
+kommunara_nikolayev_shipyards:0 "Naval"
+german_ukranian_agricultural_comission:0 "Nemetsko-ukrainskaya selskokhozyaistvennaya komissiya"
 metallurgical_combine_azovstal:0 "Azovstal"
-ukr_akhz:0 "AKHZ"
-motor_sich:0 "Motor Sich"
-zaporizhia_automobile_plant:0 "Zaporizkyi avtozavod"
-kharkiv_locomotive_factory:0 "Kharkivsky parovozobudivny zavod"
-kr_morozov_design_bureau:0 "Morozov"
-kr_antonov:0 "Antonov"
+ukr_akhz:0 "AMK"
+motor_sich:0 "Deka"
+zaporizhia_automobile_plant:0 "Zavod Abrahama Koopa"
+kharkiv_locomotive_factory:0 "KhPZ"
+kr_morozov_design_bureau:0 "KB Morozova"
+kr_antonov:0 "KB Antonova"
 anatra:0 "Anatra"
-kr_beriev:0 "Beriev"
-black_sea_shipyard:0 "Chornomorsʹkyy sudnobudivnyy zavod"
+kr_beriev:0 "ChARZ"
+black_sea_shipyard:0 "Lazarevskoe Admiralteystvo"
 
 ### Union of Britain ###
 imperial_chemical_industries:0 "International Chemical Industries"
