--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -46,8 +46,8 @@ SWE_SENREF_pensions:0 "State Pensions"
 SWE_SENREF_pensions_desc:0 "Per Albin Hansson's state pensions have shown to be very popular."
 SWE_SENREF_culture:0 "Cultural Subsidies"
 SWE_SENREF_culture_desc:0 "The government is funding art, literature and music."
-SWE_SENREF_taxcuts:0 "Increased Taxation"
-SWE_SENREF_taxcuts_desc:0 "While our recent tax hikes might hurt the economy in the short run, they will fund the most important projects our country has ever undertaken."
+SWE_SENREF_taxcuts:0 "Tax Cuts"
+SWE_SENREF_taxcuts_desc:0 "The recent tax cuts have done much to get the economy going, but the dip in public funds have led to a number of necessary downsizes of the public sector."
 SWE_SENREF_freemarket:0 "Deregulated Economy"
 SWE_SENREF_freemarket_desc:0 "Enterprise is flourishing at the cost of worker's rights in this capitalist paradise."
 SWE_SENREF_womenwork:0 "Gender Equality"
