--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -60,8 +60,8 @@ SWE_SENREF_indoctrination:0 "Indoctrination"
 SWE_SENREF_indoctrination_desc:0 "Our citizens are being raised up to be efficient killing machines of the state. This comes at the expense of free thought, and innovation is slowing down. This is, of course, a small trade-off that we have to pay in order to get a top-quality army."
 SWE_SENREF_fanaticism:0 "Fanatic Nationalism"
 SWE_SENREF_fanaticism_desc:0 "Each and every one of our citizens will happily give their lives for our country."
-SWE_SENREF_slavery:0 "Serfdom"
-SWE_SENREF_slavery_desc:0 "While not exactly slavery, this is about as close as it gets. Serfs are forced to work for nothing else than substinence, effectively making them slaves on their lords estate, working the land in exchange for very little in return."
+SWE_SENREF_industrial_statare:0 "Statare in the Industries"
+SWE_SENREF_industrial_statare_desc:0 "Instead of abruptly abolishing the Statare system, which would result in leaving thousands of unskilled workers without home or work, our government has made the decision to start resettling the affected close to the cities, having them work for our state's industries."
 SWE_SENREF_freemedia:0 "Free Press"
 SWE_SENREF_freemedia_desc:0 "The state grip on television and radio broadcasting has been done with and free thought and diverse ideas are spreading across the nation, for good and bad."
 
