some more Statare loc

--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -281,8 +281,8 @@ SWE_SENREF_POP3:0 "Stratocracy"
 SWE_SENREF_POP3_desc:0 "The military must take over all government duties. Only the most decisive and loyal of our countrymen should be allowed to assume leadership roles within our nation. Glory to Sweden."
 SWE_SENREF_STATARE1:0 "Abolish Statare"
 SWE_SENREF_STATARE1_desc:0 "Statare is basically a form of modern slavery. How can we pretend to be a nation of equal opportunite while such travesties are allowed to occur on our soil?"
-SWE_SENREF_STATARE2:0 "Legalize Human Ownership"
-SWE_SENREF_STATARE2_desc:0 "Some say that Statare is tantamount to slavery. Maybe it is, but is there really anything wrong with that?"
+SWE_SENREF_STATARE2:0 "Statare in the Industries"
+SWE_SENREF_STATARE2_desc:0 "Instead of abruptly abolishing the Statare system, which would result in leaving thousands of unskilled workers without home or work, our government has made the decision to start resettling the affected close to the cities, having them work for our state's industries."
 SWE_SENREF_COLLECT:0 "Collectivist Ethos"
 SWE_SENREF_COLLECT_desc:0 "While we each have our own lives and ambitions, we also have a duty to take care of each other. The individual must step aside for the greater good."
 SWE_SENREF_INDIV:0 "Individualist Ethos"
