Now the Dutch focus for an autonomous Dutch East Indies actually releases the Dutch East Indies!!!

--- a/localisation/KR_Netherlands_l_english.yml
+++ b/localisation/KR_Netherlands_l_english.yml
@@ -113,8 +113,10 @@ HOL_paratrooper_focus:0 "Valschermtroepen"
 HOL_paratrooper_focus_desc:0 "Some enterprising Army generals are proposing the establishment of a dedicated paratrooper unit. These forces would be lightly armed, and dropped out of planes behind enemy lines to perform sabotage and seize vital assets ahead of the main ground assault. Exploring this branch of warfare may be vital in the future."
 
 ### Tooltips ###
-unlock_HOL_aut:0 "This focus will be unlocked under special circumstances..."
-unlock_HOL_stb:0 "This focus will be unlocked only under Good Stability and above."
+unlock_HOL_aut:0 "This focus will be unlocked under special circumstances... \n"
+unlock_HOL_dutchins:0 "The Dutch East Indies will remain under our direct rule.\n" 
+unlock_HOL_autins:0 "We will concede local autonomy for the Dutch East Indies.\n" 
+unlock_HOL_stb:0 "This focus will be unlocked only under Good Stability and above.\n" 
 
 ### Parties ###
 HOL_totalist_party:0 "Patriotten"
