some dualism stuff

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2263,6 +2263,62 @@ BRA_ARG_totalist:0 "United Communes of Brazil"
 BRA_ARG_totalist_ADJ:0 "Brazilian"
 BRA_ARG_totalist_DEF:0 "United Communes of Brazil"
 
+AUS_CIS_market_liberalist:0 "Cisleithanian Austria"
+AUS_CIS_market_liberalist_ADJ:0 "Austrian"
+AUS_CIS_market_liberalist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_national_populist:0 "Cisleithanian Austria"
+AUS_CIS_national_populist_ADJ:0 "Austrian"
+AUS_CIS_national_populist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_paternal_autocratist:0 "Cisleithanian Austria"
+AUS_CIS_paternal_autocratist_ADJ:0 "Austrian"
+AUS_CIS_paternal_autocratist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_radical_socialist:0 "Cisleithanian Austria"
+AUS_CIS_radical_socialist_ADJ:0 "Austrian"
+AUS_CIS_radical_socialist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_social_conservatist:0 "Cisleithanian Austria"
+AUS_CIS_social_conservatist_ADJ:0 "Austrian"
+AUS_CIS_social_conservatist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_social_democratist:0 "Cisleithanian Austria"
+AUS_CIS_social_democratist_ADJ:0 "Austrian"
+AUS_CIS_social_democratist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_social_liberalist:0 "Cisleithanian Austria"
+AUS_CIS_social_liberalist_ADJ:0 "Austrian"
+AUS_CIS_social_liberalist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_authoritarian_democrat:0 "Cisleithanian Austria"
+AUS_CIS_authoritarian_democrat_ADJ:0 "Austrian"
+AUS_CIS_authoritarian_democrat_DEF:0 "Cisleithanian Austria"
+AUS_CIS_totalist:0 "Cisleithanian Austria"
+AUS_CIS_totalist_ADJ:0 "Austrian"
+AUS_CIS_totalist_DEF:0 "Cisleithanian Austria"
+
+HUN_TRANS_market_liberalist:0 "Transleithanian Austria"
+HUN_TRANS_market_liberalist_ADJ:0 "Hungarian"
+HUN_TRANS_market_liberalist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_national_populist:0 "Transleithanian Austria"
+HUN_TRANS_national_populist_ADJ:0 "Hungarian"
+HUN_TRANS_national_populist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_paternal_autocratist:0 "Transleithanian Austria"
+HUN_TRANS_paternal_autocratist_ADJ:0 "Hungarian"
+HUN_TRANS_paternal_autocratist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_radical_socialist:0 "Transleithanian Austria"
+HUN_TRANS_radical_socialist_ADJ:0 "Hungarian"
+HUN_TRANS_radical_socialist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_social_conservatist:0 "Transleithanian Austria"
+HUN_TRANS_social_conservatist_ADJ:0 "Hungarian"
+HUN_TRANS_social_conservatist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_social_democratist:0 "Transleithanian Austria"
+HUN_TRANS_social_democratist_ADJ:0 "Hungarian"
+HUN_TRANS_social_democratist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_social_liberalist:0 "Transleithanian Austria"
+HUN_TRANS_social_liberalist_ADJ:0 "Hungarian"
+HUN_TRANS_social_liberalist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_authoritarian_democrat:0 "Transleithanian Austria"
+HUN_TRANS_authoritarian_democrat_ADJ:0 "Hungarian"
+HUN_TRANS_authoritarian_democrat_DEF:0 "Transleithanian Austria"
+HUN_TRANS_totalist:0 "Transleithanian Austria"
+HUN_TRANS_totalist_ADJ:0 "Hungarian"
+HUN_TRANS_totalist_DEF:0 "Transleithanian Austria"
+
 ##############
 #Vanilla
 ##############
