--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -548,76 +548,61 @@ HOL_submarine_1_desc:0 "The K-III class consisted of two submarines built for an
 HOL_submarine_2:0 "O-16 Class"
 HOL_submarine_2_desc:0 "The O16 submarine was manufactured and commissioned in the Netherlands for the Royal Dutch Navy in 1936. She was a large submarine, displacing over 980 tons. She had a diving depth of 80m and was armed with eight 533mm torpedo tubes."
 HOL_submarine_3:0 "O-21 Class"
-HOL_submarine_3_desc:0 "The O21 class consisted of seven submarines built and commissioned by the Netherlands. The ships were all incomplete at the time of the German invasion, though five managed to escape to Britain and serve the Dutch Navy in exile. The subs were slightly larger than the preceding O-class subs, displacing over 990 tons, but were similarly armed with eight 533mm torpedo tubes."
+HOL_submarine_3_desc:0 "The O21 class is a further development of the predecessing O-16 Class. The subs were slightly larger than the preceding O-class subs, displacing over 990 tons, but are better armed with ten 533mm torpedo tubes."
 HOL_submarine_4:0 "Zwaardvis Class"
-HOL_submarine_4_desc:0 "The Zwaardvis class represented four British Taciturn-class subs transferred to the Royal Dutch Navy in exile between 1943 and 1945. The ships displaced 1,090 tons, were armed with eleven 533mm torpedo tubes, and had a diving depth of over 100m."
+HOL_submarine_4_desc:0 "The application of electro-engines in Dutch submarines allows for much quieter operation and thus increasing their effectiveness. The "Zwaardvis" (Swordfish) class of submarines are redesigned O-21 class submarines, further enlargend to a displacement of 1,090 tons, were armed with fourteen 533mm torpedo tubes, and had a diving depth of over 100m."
 
 ### Destroyers ####
 HOL_destroyer_1:0 "Van Ghent Class"
 HOL_destroyer_1_desc:0 "The Van Ghent, or Admiralen, class consisted of eight destroyers built for the Royal Dutch Navy between 1926 and 1931. The ships were based upon early versions of the British A-class. All ships fought in World War II and were either scuttled or sunk. The ships displaced over 1,300 tons, were armed with four 120mm guns, and had decent speed for their vintage."
-HOL_destroyer_2:0 "Fret Class"
-HOL_destroyer_2_desc:0 "Placeholder."
+HOL_destroyer_2:0 "Flores Class"
+HOL_destroyer_2_desc:0 "The Flores Class were gunboats intended for patrol service in the Dutch East Indies. Heavily armed for their size with a main arnament consisting of 3 150mm guns and had advanced fire control systems. Their heavy arnament made them relatively slow ships, although their intended role mitigated this."
 HOL_destroyer_3:0 "Callenburgh Class"
-HOL_destroyer_3_desc:0 "The Gerard Callenburgh class planned for four destroyers for the Royal Dutch Navy. All four were launched before the German invasion, but only two were completed, one by the British after escaping to England, and one by the Germans. These destroyers displaced over 1,600 tons, were armed with five 120mm guns in their main armament, as well as eight 533mm torpedo tubes, and had good speed."
+HOL_destroyer_3_desc:0 "The Gerard Callenburgh class planned for four destroyers for the Royal Dutch Navy. These destroyers displaced over 1,600 tons, were armed with five 120mm guns in their main armament, as well as eight 533mm torpedo tubes, and had good speed."
 HOL_destroyer_4:0 "Piet Hein Class"
-HOL_destroyer_4_desc:0 "The Piet Hein class consisted of three British S-class destroyers transferred to the Royal Dutch Navy shortly after the war. The ships displaced over 1,800 tons, were armed with four 120mm/45 QF Mk IX guns, and had a wide array of ASW armaments."
+HOL_destroyer_4_desc:0 "A further development of the Gerard Callenburgh class, taking their well rounded attributes from their predecesors and refining them further. The ships displaced over 1,800 tons, were armed with four 120mm guns, and had a wide array of ASW armaments as well as on board radar provided by Hazemeyer."
 
 ### Light Cruisers ###
 HOL_light_cruiser_pre:0 "Soemba Class"
-HOL_light_cruiser_pre_desc:0 "Placeholder."
 HOL_light_cruiser_1:0 "Java Class"
 HOL_light_cruiser_1_desc:0 "The Dutch commissioned two Java-class light cruisers in the mid-1920s. The ships were designed in Germany but constructed in the Netherlands. They displaced nearly 6,700 tons and had a main armament of ten 150mm Bofors guns. They were lightly armored and had decent speed for their vintage."
 HOL_light_cruiser_2:0 "De Ruyter Class"
 HOL_light_cruiser_2_desc:0 "The light cruiser De Ruyter was built and commissioned in the Netherlands during the mid-1930s. She served primarily in the Dutch East Indies. She displaced over 6,500 tons and was armed with seven 150mm guns in her main armament. She had below-average speed but good range."
 HOL_light_cruiser_3:0 "Tromp Class"
-HOL_light_cruiser_3_desc:0 "The Tromp class consisted of a pair of relatively small light cruisers commissioned for the Netherlands just before the German invasion. Both served in the Far East and survived the war. They displaced only 3,350 tons and, as designed, had six 150m guns as their main armament."
+HOL_light_cruiser_3_desc:0 "The Tromp class consists of relatively small light cruisers commissioned for the Netherlands. They displace only 3,350 tons and, as designed, had six 150m guns as their main armament."
 HOL_light_cruiser_4:0 "De Zeven Provinciën Class"
-HOL_light_cruiser_4_desc:0 "The De Zeven Provinciën class consisted of two cruisers laid down just before the German invasion but not completed until 1951. The final design was modified from the original 1939 plan, and led to two ships that displaced over 12,000 tons and were armed with eight Bofors 152mm cannon. They were well-armored for a light cruiser and had good range."
+HOL_light_cruiser_4_desc:0 "Considerably larger than the predecessing cruiser designs, these ships displace over 12,000 tons and were armed with eight 152mm cannons. They were well-armored for a light cruiser and had good range."
 
 ### Heavy Cruisers ###
-HOL_heavy_cruiser_pre:0 "Sumatra Class"
-HOL_heavy_cruiser_pre_desc:0 "Placeholder."
+HOL_heavy_cruiser_pre:0 "Koningin Regentes Class"
 HOL_heavy_cruiser_1:0 "Soerabaja Class"
-HOL_heavy_cruiser_1_desc:0 "The Dutch cruiser Soerabaja, originally named De Zeven Provinciën, was a coastal defense ship ('panterschip') built and commissioned in the Netherlands prior to World War I. She displaced over 6,500 tons and was armed with two 280mm and four 150mm guns as her main armament. She served during World War II until she was sunk by Japanese bombers in 1942."
+HOL_heavy_cruiser_1_desc:0 "The Dutch cruiser Soerabaja, originally named De Zeven Provinciën, was a coastal defense ship ('panterschip') built and commissioned in the Netherlands prior to World War I."
 HOL_heavy_cruiser_2:0 "Ambon Class"
-HOL_heavy_cruiser_2_desc:0 "Placeholder."
+HOL_heavy_cruiser_2_desc:0 "Named after the island Ambon, this design of heavy cruisers is proposed to replace the aging 'Pantserschepen' (coastal defence ships) of the Netherlands. The design is to be heavily armed for its size, continuing the coastal defence ship tradition with 3 240mm guns proposed as main arnament. As a concequence, these ships will be slow for a cruiser, but less so than the old Panterschepen."
 HOL_heavy_cruiser_3:0 "Atjeh Class"
-HOL_heavy_cruiser_3_desc:0 "Placeholder."
-HOL_heavy_cruiser_4:0 "Somerset Class"
-HOL_heavy_cruiser_4_desc:0 "Placeholder."
+HOL_heavy_cruiser_4:0 "Soematra Class"
 
 ### Battle Cruisers ###
 HOL_battle_cruiser_pre:0 "Hollandia Class"
-HOL_battle_cruiser_pre_desc:0 "Placeholder"
 HOL_battle_cruiser_1:0 "Van Speijk Class"
-HOL_battle_cruiser_1_desc:0 "Placeholder."
+HOL_battle_cruiser_1_desc:0 "Codenamed "Design 1047", these Battlecruisers are intended for the defence of the East Indies. With an displacement of about 28.000 tonnes, these ships will have a larger displacement than the Batavia class battleships currently in service. Armed with 9 283mm guns in three turrets, along with a secundary arnament of 12 120mm guns, the ships pack considerable firepower while being much faster than the contempary battleships."
 HOL_battle_cruiser_2:0 "Witte de With Class"
-HOL_battle_cruiser_2_desc:0 "Placeholder."
 
 ### Battleships ###
 HOL_battleship_pre:1 "Evertsen class"
 HOL_battleship_pre_desc:1 "Placeholder.
 HOL_battleship_1:1 "Batavia Class"
-HOL_battleship_1_desc:1 "Placeholder."
+HOL_battleship_1_desc:1 "The ambitious 'Vlootplan Deckers' of 1913 provided for 9 dreadnoughts for the Royal Dutch Navy, as the arms race between the navies of the world intesified and Japan in particular was seen as a threat to the Dutch colonial possessions in Asia. Funding eventually was provided for four of these dreadnoughts designed partially in Germany. Armed with 8 356mm guns and a further 16 150mm secondaries, these ships displace 26.000 tonnes and are by far the largest Dutch ships built to date."
 HOL_battleship_2:0 "Koningin Regentes Class"
-HOL_battleship_2_desc:0 "Placeholder."
 HOL_battleship_3:0 "Philip van Almond Class"
-HOL_battleship_3_desc:0 "Placeholder."
 HOL_battleship_4:0 "Koningin Wilhelmina Class"
-HOL_battleship_4_desc:0 "Placeholder."
 
 ### Super Heavy Battleships ###
 HOL_SH_battleship_1:0 "Willem van Oranje Class"
-HOL_SH_battleship_1_desc:0 "Placeholder."
 HOL_SH_battleship_2:0 "Eendracht Class"
-HOL_SH_battleship_2_desc:0 "Placeholder."
 
 ### Carriers ###
 HOL_carrier_1:0 "Gouden Leeuw Class"
-HOL_carrier_1_desc:0 "Placeholder."
 HOL_carrier_2:0 "Gouden Draak Class"
-HOL_carrier_2_desc:0 "Placeholder."
 HOL_carrier_3:0 "Onoverwinnelijk Class"
-HOL_carrier_3_desc:0 "Placeholder."
 HOL_carrier_4:0 "Glorie Class"
-HOL_carrier_4_desc:0 "Placeholder."
