Totalist Croatia now has name

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -1426,9 +1426,9 @@ CRE_national_populist:0 "Crete"
 CRE_national_populist_ADJ:0 "Cretan"
 CRE_national_populist_DEF:0 "Crete"
 
-CRO_totalist:0 "Socialist Republic of Croatia
+CRO_totalist:0 "Socialist Republic of Croatia"
 CRO_totalist_ADJ:0 "Croatian"
-CRO_totalist_DEF:0 "The Socialist Republic of Croatia
+CRO_totalist_DEF:0 "The Socialist Republic of Croatia"
 CRO_syndicalist:0 "Socialist Republic of Croatia"
 CRO_syndicalist_ADJ:0 "Croatian"
 CRO_syndicalist_DEF:0 "The Socialist Republic of Croatia"
